--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,18 @@
-/* VARIABLES */
+@font-face {
+  font-family: "Livvic";
+  font-weight: 600;
+  font-display: swap;
+  src: url("../fonts/livvic-v13-latin-600.woff2") format("woff2"), 
+  url("../fonts/livvic-v13-latin-600.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Livvic";
+  font-weight: 700;
+  font-display: swap;
+  src: url("../fonts/livvic-v13-latin-700.woff2") format("woff2"), 
+  url("../fonts/livvic-v13-latin-700.woff") format("woff"); 
+}
 
 
 /* GENERAL */
@@ -26,10 +40,8 @@ body{
   height: 100%;
   margin: 0;
   padding: 0;
-  /* font-family: "Roboto", "Arial", sans-serif; */
-  /* font-size: 16px; */
-  /* font-weight: 400; */
-  /* line-height: var(--main-line-height); */
+  font-family: "Livvic", "Arial", sans-serif;
+
 }
 
 /* VISUALLY-HIDDEN */
@@ -50,7 +62,7 @@ body{
 /* CONTAINER */
 
 .container{
-  /* max-width: YOUR CONTAINER MAX-WIDTH PX HERE; */
+  width: 1150px;
   margin-right: auto;
   margin-left: auto;
   padding-right: 20px;
